--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon src/app.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-myconnection": "^1.0.4",
+    "express-session": "^1.16.2",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1"
   },
